[gd_scene load_steps=15 format=3 uid="uid://exlfjrsql2fw"]

[ext_resource type="Script" uid="uid://bjs48hyrufm2s" path="res://scenes/town/trade/trade.gd" id="1_1e65h"]
[ext_resource type="Texture2D" uid="uid://dhmyuc14ebn1e" path="res://assets/backgrounds/MarketBackground.png" id="1_sh6sl"]
[ext_resource type="Texture2D" uid="uid://ciqv4m2ttxndr" path="res://assets/ui/town/trade/TradeMenuEmpty.png" id="2_httn2"]
[ext_resource type="FontFile" uid="uid://duln27t01nc1q" path="res://assets/fonts/Minecraftia-Regular.ttf" id="4_jkeck"]
[ext_resource type="Texture2D" uid="uid://clfek7apvtvmu" path="res://assets/ui/town/trade/leftarrow.PNG" id="5_1e65h"]
[ext_resource type="Texture2D" uid="uid://hv6tuk6kan5x" path="res://assets/ui/town/trade/rightarrow.PNG" id="7_4c0wx"]
[ext_resource type="Texture2D" uid="uid://bdnwjqcrfet5y" path="res://assets/ui/town/Leave.png" id="7_h647s"]
[ext_resource type="LabelSettings" uid="uid://b7kljk1ntsalm" path="res://assets/ui/town/trade/trade_amount_label_settings.tres" id="8_4c0wx"]
[ext_resource type="FontFile" uid="uid://bmfleyxdqpc0r" path="res://assets/fonts/pixel_pirate.ttf" id="8_httn2"]
[ext_resource type="Texture2D" uid="uid://btvea3m20hwrx" path="res://assets/ui/town/Trade.png" id="9_4c0wx"]

[sub_resource type="LabelSettings" id="LabelSettings_0thvx"]
font = ExtResource("4_jkeck")
font_size = 30
font_color = Color(0.21960784, 0.14117648, 0.05882353, 1)
outline_size = 2
outline_color = Color(0.04755766, 0.047557645, 0.047557645, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1e65h"]
font = ExtResource("8_httn2")
font_size = 64
font_color = Color(1, 0.8862745, 0.02745098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4c0wx"]
font = ExtResource("8_httn2")
font_size = 48
font_color = Color(1, 0.8862745, 0.02745098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jkeck"]
font = ExtResource("8_httn2")
font_size = 48
font_color = Color(1, 0.8862745, 0.02745098, 1)

[node name="Trade" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1e65h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundArt" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sh6sl")
metadata/_edit_use_anchors_ = true

[node name="MenuBackground" type="TextureRect" parent="CanvasLayer"]
offset_left = 9.0
offset_top = -21.0
offset_right = 2563.0
offset_bottom = 1489.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_httn2")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuBackground"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 0
offset_left = 220.00003
offset_top = 459.99994
offset_right = 927.0
offset_bottom = 959.99994
scale = Vector2(3, 3)

[node name="FishContainer" type="HBoxContainer" parent="CanvasLayer/MenuBackground/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerFishLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/FishContainer"]
layout_mode = 2
text = "0 lb   "
label_settings = ExtResource("8_4c0wx")

[node name="AddToPlayer" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/FishContainer"]
layout_mode = 2
texture_normal = ExtResource("5_1e65h")

[node name="Fish" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/FishContainer"]
layout_mode = 2
text = "    Fish     "
label_settings = SubResource("LabelSettings_0thvx")
horizontal_alignment = 1

[node name="AddToMerchant" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/FishContainer"]
layout_mode = 2
texture_normal = ExtResource("7_4c0wx")

[node name="MerchantFishLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/FishContainer"]
layout_mode = 2
text = "   20 lb"
label_settings = ExtResource("8_4c0wx")

[node name="RumContainer" type="HBoxContainer" parent="CanvasLayer/MenuBackground/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerRumLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/RumContainer"]
layout_mode = 2
text = "0 lb   "
label_settings = ExtResource("8_4c0wx")

[node name="AddToPlayer" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/RumContainer"]
layout_mode = 2
texture_normal = ExtResource("5_1e65h")

[node name="Rum" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/RumContainer"]
layout_mode = 2
text = "     Rum     "
label_settings = SubResource("LabelSettings_0thvx")
horizontal_alignment = 1

[node name="AddToMerchant" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/RumContainer"]
layout_mode = 2
texture_normal = ExtResource("7_4c0wx")

[node name="MerchantRumLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/RumContainer"]
layout_mode = 2
text = "   20 lb"
label_settings = ExtResource("8_4c0wx")

[node name="OreContainer" type="HBoxContainer" parent="CanvasLayer/MenuBackground/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerOreLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/OreContainer"]
layout_mode = 2
text = "0 lb   "
label_settings = ExtResource("8_4c0wx")

[node name="AddToPlayer" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/OreContainer"]
layout_mode = 2
texture_normal = ExtResource("5_1e65h")

[node name="Ore" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/OreContainer"]
layout_mode = 2
text = "     Ore     "
label_settings = SubResource("LabelSettings_0thvx")
horizontal_alignment = 1

[node name="AddToMerchant" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/OreContainer"]
layout_mode = 2
texture_normal = ExtResource("7_4c0wx")

[node name="MerchantOreLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/OreContainer"]
layout_mode = 2
text = "   20 lb"
label_settings = ExtResource("8_4c0wx")

[node name="ClothesContainer" type="HBoxContainer" parent="CanvasLayer/MenuBackground/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerClothesLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/ClothesContainer"]
layout_mode = 2
text = "0 lb   "
label_settings = ExtResource("8_4c0wx")

[node name="AddToPlayer" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/ClothesContainer"]
layout_mode = 2
texture_normal = ExtResource("5_1e65h")

[node name="Clothes" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/ClothesContainer"]
layout_mode = 2
text = " Clothes "
label_settings = SubResource("LabelSettings_0thvx")
horizontal_alignment = 1

[node name="AddToMerchant" type="TextureButton" parent="CanvasLayer/MenuBackground/VBoxContainer/ClothesContainer"]
layout_mode = 2
texture_normal = ExtResource("7_4c0wx")

[node name="MerchantClothesLBs" type="Label" parent="CanvasLayer/MenuBackground/VBoxContainer/ClothesContainer"]
layout_mode = 2
text = "   20 lb"
label_settings = ExtResource("8_4c0wx")

[node name="Leave" type="TextureButton" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 168.0
offset_top = 1096.0
offset_right = 669.0
offset_bottom = 1235.0
texture_normal = ExtResource("7_h647s")

[node name="Trade" type="TextureButton" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 1804.0
offset_top = 1106.0
offset_right = 2335.0
offset_bottom = 1241.0
texture_normal = ExtResource("9_4c0wx")

[node name="PlayerNameLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 192.0
offset_top = 116.0
offset_right = 808.0
offset_bottom = 204.0
text = "PlayerName"
label_settings = SubResource("LabelSettings_1e65h")

[node name="PlayerGoldLabel" type="Label" parent="CanvasLayer/MenuBackground/PlayerNameLabel"]
layout_mode = 0
offset_left = 46.0
offset_top = 100.0
offset_right = 214.0
offset_bottom = 166.0
text = "300g"
label_settings = SubResource("LabelSettings_4c0wx")

[node name="MerchantNameLabel" type="Label" parent="CanvasLayer/MenuBackground"]
layout_mode = 0
offset_left = 1554.0
offset_top = 116.0
offset_right = 2322.0
offset_bottom = 204.0
text = "MerchantName"
label_settings = SubResource("LabelSettings_1e65h")

[node name="MerchantGoldLabel" type="Label" parent="CanvasLayer/MenuBackground/MerchantNameLabel"]
layout_mode = 0
offset_left = 62.0
offset_top = 94.0
offset_right = 230.0
offset_bottom = 160.0
text = "500g"
label_settings = SubResource("LabelSettings_jkeck")

[connection signal="pressed" from="CanvasLayer/MenuBackground/Leave" to="." method="_on_leave_pressed"]
